--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <label for="name">Name:</label>
         <input type="text" id="name" v-model.tirm="$v.form.name.$model" placeholder="Please enter your name">
         <p v-if="!$v.form.name.required" class="error-message">The name field is required</p>
+        <p v-if="!$v.form.name.minLength" class="error-message">The name field must between at least 3 letters</p>
       </div>
 
       <div class="form-group">
@@ -31,7 +32,7 @@
       </div>
 
       <div style="text-align: center;">
-        <button class="btn-submit">Submit</button>
+        <button :disabled="$v.form.$invalid" class="btn-submit">Submit</button>
       </div>
     </form>
   </div>
