display form errors on submit

--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
         </div>
       </div>
 
-      <div style="text-align: center;">
-        <button :disabled="$v.form.$invalid" class="btn-submit">Submit</button>
+      <div>
+        <button class="btn-submit">Submit</button>
       </div>
     </form>
   </div>
