--- a/index.html
+++ b/index.html
@@ -7,9 +7,6 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Form Validation</title>
   <link rel="stylesheet" href="./style.css">
-  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
-  <script src="https://unpkg.com/vuelidate@0.7.4/dist/vuelidate.min.js"></script>
-  <script src="https://unpkg.com/vuelidate@0.7.4/dist/validators.min.js"></script>
 </head>
 
 <body>
@@ -17,9 +14,9 @@
     <h1>Form Validation</h1>
 
     <form @submit.prevent="submitForm($v)">
-      <div class="form-group" :class="{ 'form-group--error': $v.form.name.$error }">
+      <div class="form-group" :class="{ 'form-group--error': $v.form.name.$error, 'form-group--valid': !$v.form.name.$invalid }">
         <label class="form__label" for="name">Name:</label>
-        <input class="form__input" type="text" id="name" v-model.tirm="$v.form.name.$model" placeholder="Please enter your name">
+        <input class="form__input" type="text" id="name" v-model.tirm="form.name" placeholder="Please enter your name" @blur="nameIsValid($v)">
         <div v-if="$v.form.name.$error">
           <p v-if="!$v.form.name.required" class="error-message">The name field is required</p>
           <p v-else-if="!$v.form.name.minLength" class="error-message">The name field must between at least 3 letters
@@ -27,9 +24,9 @@
         </div>
       </div>
 
-      <div class="form-group" :class="{ 'form-group--error': $v.form.age.$error }">
+      <div class="form-group" :class="{ 'form-group--error': $v.form.age.$error, 'form-group--valid': !$v.form.name.$invalid }">
         <label class="form__label" for="age">Age:</label>
-        <input class="form__input" type="number" id="age" v-model.number="$v.form.age.$model" placeholder="Please enter your age">
+        <input class="form__input" type="number" id="age" v-model.number="form.age" placeholder="Please enter your age"  @blur="ageIsValid($v)">
         <div v-if="$v.form.age.$error">
           <p v-if="!$v.form.age.required" class="error-message">The age field is required</p>
           <p v-else-if="!$v.form.age.integer" class="error-message">The age field should be an
@@ -39,12 +36,23 @@
         </div>
       </div>
 
+      <div class="form-group" :class="{ 'form-group--error': $v.form.email.$error, 'form-group--valid': !$v.form.email.$invalid && form.email }">
+          <label class="form__label" for="email">Email:</label>
+          <input class="form__input" type="email" id="email" v-model.number="form.email" placeholder="Please enter your email address">
+          <!-- <div v-if="$v.form.email.$error">
+            <p v-if="!$v.form.age.required" class="error-message">The age field is required</p>
+          </div> -->
+        </div>
+
       <div>
         <button class="btn-submit">Submit</button>
       </div>
     </form>
   </div>
 
+  <script src="https://cdn.jsdelivr.net/npm/vue"></script>
+  <script src="https://unpkg.com/vuelidate@0.7.4/dist/vuelidate.min.js"></script>
+  <script src="https://unpkg.com/vuelidate@0.7.4/dist/validators.min.js"></script>
   <script src="./app.js"></script>
 </body>
 
