--- a/index.html
+++ b/index.html
@@ -14,9 +14,11 @@
     <h1>Form Validation</h1>
 
     <form @submit.prevent="submitForm($v)">
-      <div class="form-group" :class="{ 'form-group--error': $v.form.name.$error, 'form-group--valid': !$v.form.name.$invalid }">
+      <div class="form-group"
+        :class="{ 'form-group--error': shouldAppendErrorClass($v.form.name), 'form-group--valid': shouldAppendValidClass($v.form.name) }">
         <label class="form__label" for="name">Name:</label>
-        <input class="form__input" type="text" id="name" v-model.tirm="form.name" placeholder="Please enter your name" @blur="nameIsValid($v)">
+        <input class="form__input" type="text" id="name" v-model.tirm="form.name" placeholder="Please enter your name"
+          @blur="nameIsValid($v.form)">
         <div v-if="$v.form.name.$error">
           <p v-if="!$v.form.name.required" class="error-message">The name field is required</p>
           <p v-else-if="!$v.form.name.minLength" class="error-message">The name field must between at least 3 letters
@@ -24,9 +26,11 @@
         </div>
       </div>
 
-      <div class="form-group" :class="{ 'form-group--error': $v.form.age.$error, 'form-group--valid': !$v.form.name.$invalid }">
+      <div class="form-group"
+        :class="{ 'form-group--error': shouldAppendErrorClass($v.form.age), 'form-group--valid': shouldAppendValidClass($v.form.age) }">
         <label class="form__label" for="age">Age:</label>
-        <input class="form__input" type="number" id="age" v-model.number="form.age" placeholder="Please enter your age"  @blur="ageIsValid($v)">
+        <input class="form__input" type="number" id="age" v-model.number="form.age" placeholder="Please enter your age"
+          @blur="ageIsValid($v.form)">
         <div v-if="$v.form.age.$error">
           <p v-if="!$v.form.age.required" class="error-message">The age field is required</p>
           <p v-else-if="!$v.form.age.integer" class="error-message">The age field should be an
@@ -36,13 +40,15 @@
         </div>
       </div>
 
-      <div class="form-group" :class="{ 'form-group--error': $v.form.email.$error, 'form-group--valid': !$v.form.email.$invalid && form.email }">
-          <label class="form__label" for="email">Email:</label>
-          <input class="form__input" type="email" id="email" v-model.number="form.email" placeholder="Please enter your email address">
-          <!-- <div v-if="$v.form.email.$error">
+      <div class="form-group"
+        :class="{ 'form-group--error': shouldAppendErrorClass($v.form.email), 'form-group--valid': shouldAppendValidClass($v.form.email) }">
+        <label class="form__label" for="email">Email:</label>
+        <input class="form__input" type="email" id="email" v-model.number="form.email"
+          placeholder="Please enter your email address">
+        <!-- <div v-if="$v.form.email.$error">
             <p v-if="!$v.form.age.required" class="error-message">The age field is required</p>
           </div> -->
-        </div>
+      </div>
 
       <div>
         <button class="btn-submit">Submit</button>
@@ -53,7 +59,7 @@
   <script src="https://cdn.jsdelivr.net/npm/vue"></script>
   <script src="https://unpkg.com/vuelidate@0.7.4/dist/vuelidate.min.js"></script>
   <script src="https://unpkg.com/vuelidate@0.7.4/dist/validators.min.js"></script>
-  <script src="./app.js"></script>
+  <script type="module" src="./app.js"></script>
 </body>
 
 </html>
